# ITLP-Campus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  Semantic Labels - Indoor.csv  Semantic Labels - Outdoor.csv  download_dataset.py  pyproject.toml
cfg/: indoor_anno_config.json  indoor_anno_description.md  outdoor_anno_description.md
scripts/: extract_trajectories.py  show_pcd.py  subsample_and_unpack_bags.py  subsample_data.py  unpack_bags.py
src/: dataset.py
src/itlp_campus/: __init__.py  dataset.py  preprocessing.py  transforms.py  visualizations.py
tests/: test_preprocessing.py  test_transforms.py  test_visualizations.py
