[tool.poetry]
name = "itlp-campus"
version = "0.1.0"
description = "ITLP-Campus dataset SDK."
authors = [
    "Alexander Melekhin <amelekhin96@gmail.com>",
    "Vitalyy Bezuglyj",
    "Ilya Petryashin",
    "Dmitry Yudin",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
black = "^23.10.1"
flake8-black = "^0.3.6"
isort = "^5.12.0"
flake8-isort = "^6.1.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
