[tool.poetry]
name = "itlp-campus"
version = "0.1.0"
description = "ITLP-Campus dataset SDK."
authors = [
    "Alexander Melekhin <amelekhin96@gmail.com>",
    "Vitalyy Bezuglyj",
    "Ilya Petryashin",
    "Dmitry Yudin",
]
readme = "README.md"

[[tool.poetry.source]]
name = "rospypi"
url = "https://rospypi.github.io/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
numpy = "<1.25"
open3d = "^0.17.0"
scikit-learn = "^1.3.2"
addict = "^2.4.0"
pillow = "^10.1.0"
pandas = "<2.1"
tqdm = "^4.66.1"
rospy = { version = "^1.15.11", source = "rospypi" }
rosbag = { version = "^1.15.11", source = "rospypi" }
std-msgs = { version = "^0.5.13.post0", source = "rospypi" }
rosgraph-msgs = { version = "^1.11.3.post2", source = "rospypi" }
opencv-python = "^4.8.1.78"
cv-bridge = {version = "^1.13.0.post1", source = "rospypi"}
sensor-msgs = {version = "^1.13.0.post3", source = "rospypi"}
geometry-msgs = {version = "^1.13.0.post2", source = "rospypi"}
matplotlib = "<3.8"

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = "1.13.1"
torchvision = "0.14.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
black = "^23.10.1"
flake8-black = "^0.3.6"
isort = "^5.12.0"
flake8-isort = "^6.1.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 110
